syntax = "proto3";

package curie;

option go_package = "flag-example/proto";

// 원본 블록 데이터
message CurieBlock {
    bytes dummy_data = 1;
}

// ECDSA Signature
message Signature {
    bytes sig= 1;
}

/* Original Gossip Data */
// 1. Signed Hashing Data
// 2. Original Block Data
message SignedCurieBlockForOG {
    CurieBlock body = 1;
    Signature signature = 2;
}

/* New Gossip Data */
// 1. Signed Hashing Data
message SignedCurieBlockForNG {
    Signature signature = 1;
}

